== 14.12.06 ==
mi:     removing MPX ifdefs
	global sprite renaming in mipointer and misprite
	fixed: multiple remove cursor call in miSpriteInstallColormap
	fixed: wrong core pointer usage in miSpriteStoreColors

dix:    bugfix in CheckCursorConfinement
	removing MPX ifdefs
	removing MPX event generation (using Xi solely now)

Files:
	mi/midispcur.c
	mi/misprite.c
	mi/mispritest.h
	mi/mipointer.c
	dix/getevents.c
	dix/events.c
	dix/cursor.c

== 12.12.06 ==
dix:    Moving SpriteRec into DeviceIntRec
	removing global sprite structure
	beginning to remove MPX ifdefs

xnest:  Fix to make xnest compile again 

Files:
	dix/getevents.c
	dix/events.c
	dix/devices.c
	hw/xfree86/common/xf86Xinput.c
	include/cursor.h
	include/dix.h
	include/dixevents.h
	include/input.h
	include/inputstr.h
	XTrap/xtrapdi.c
	Xext/xtest.c
	hw/xnest/Events.c
	record/record.c

== 05.12.06 ==
Xi:     adding MPX checks to ProcessOtherEvents

mpx:    adding QueryPointer request and reply
	adjusting names of requests to Xlib compatible naming (xMPX*** instead of
	mpx***)


Files:
	Xi/exevents.c
	mpx/Makefile.am
	mpx/extinit.c
	mpx/getevbase.c
	mpx/getvers.c
	mpx/queryptr.c
	mpx/queryptr.h
	mpx/selectev.c
	mpx/listdev.h
	mpx/listdev.c
	include/mpxextinit.h

____________________________________________________________

Merging from master

____________________________________________________________

Ironing some glitches caused by the merge

Files:
	Xi/exevents.c
	randr/rrpointer.c
	dix/events.c


== 01.12.06 ==

mpx:    SelectEvents and GetEventBase requests. 
	Some renaming and cleaning up in extinit.c
	MPXLastEvent added 

Xi:	ShouldFreeInputMask() from XI is not static any more, used in mpx

dix:	GetPointerEvents() allocates MPX event for MPX devices.
	DeliverDeviceEvents() caters for MPX devices.


Files:
	configure.ac
	mpx/Makefile.am
	mpx/extinit.c
	mpx/getvers.c
	mpx/getevbase.c
	mpx/getevbase.h
	mpx/listdev.c
	mpx/listdev.h
	mpx/mpxglobals.h
	mpx/selectev.c
	mpx/selectev.h
	mpx/mpxevents.h