@@ -246,11 +246,8 @@ ProcessInputEvents ()
   xf86Info.inputPending = FALSE;
 
   mieqProcessInputEvents();
-#ifndef MPX
-  /* For MPX, this is done inside the mieqProcessInputEvents() */
-  miPointerUpdateSprite(inputInfo.pointer);
-#endif
 
+  /* FIXME: This is a problem if we have multiple pointers */
   miPointerGetPosition(inputInfo.pointer, &x, &y);
   xf86SetViewport(xf86Info.currentScreen, x, y);
 }
